<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_30sdp"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:contentDescription="@string/logo"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_logo" />

            <TextView
                style="@style/LoginPromotionalTextView"
                android:layout_marginTop="@dimen/_8sdp" />

            <LinearLayout
                android:id="@+id/clFormInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/LoginOutlineEditTextLayout"
                    android:hint="@string/email"
                    app:endIconMode="clear_text"
                    app:helperText="@string/login_email_input_hint"
                    app:startIconDrawable="@drawable/ic_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        style="@style/LoginOutlineEditText"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/LoginOutlineEditTextLayout"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle"
                    app:helperText="@string/login_password_input_hint"
                    app:startIconDrawable="@drawable/ic_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        style="@style/LoginOutlineEditText"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    style="@style/LoginTextButtonPrimary"
                    android:text="@string/forgot_password" />
                <com.google.android.material.button.MaterialButton
                    style="@style/LoginButtonPrimary"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/login" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/btnFacebook"
                        style="@style/LoginButtonFacebook" />

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/btnGmail"
                        style="@style/LoginButtonGmail" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <!--    <com.google.android.material.bottomappbar.BottomAppBar-->
    <!--        android:id="@+id/bar"-->
    <!--        style="@style/Widget.MaterialComponents.BottomAppBar"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="bottom"-->
    <!--        app:backgroundTint="@color/colorPrimary"-->
    <!--        app:fabAlignmentMode="end"-->
    <!--        app:fabAnimationMode="slide"-->
    <!--        app:fabCradleMargin="@dimen/_8sdp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:title="@string/app_name"-->
    <!--        app:titleTextColor="@color/white" />-->

    <!--    <ImageView-->
    <!--        android:id="@+id/event_logo"-->
    <!--        android:layout_width="65dp"-->
    <!--        android:layout_height="65dp"-->
    <!--        android:contentDescription="event_logo"-->
    <!--        android:elevation="20dp"-->
    <!--        app:layout_anchor="@+id/bar"-->
    <!--        app:layout_anchorGravity="bottom|right"-->
    <!--        android:src="@drawable/ic_logo"-->
    <!--        tools:targetApi="lollipop" />-->

    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--        android:id="@+id/fab2"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:srcCompat="@drawable/ic_logo"-->
    <!--        app:fabCustomSize="@dimen/_54sdp"-->
    <!--        app:layout_anchor="@id/bar"-->
    <!--        app:maxImageSize="@dimen/_54sdp" />-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>

